# Diploma_Thesis

./: .gitignore  .gitmodules  README.md  UOV.nb
src/esp/ecdsa/: CMakeLists.txt  README.md  sdkconfig.defaults
src/esp/ecdsa/main/: CMakeLists.txt  api.h  memory_measurement.c  memory_measurement.h  test.c
src/esp/luov/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
src/esp/luov/components/XKCP/: CMakeLists.txt  XKCP
src/esp/luov/main/: CMakeLists.txt  LUOV.c  parameters.h  test.c
src/esp/rb/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  testkat_alternative.sh~
src/esp/rb/components/: wolfssl
src/esp/rb/main/: CMakeLists.txt  malloc.c  malloc.h  rainbow.c  rainbow_config.h  rainbow_keypair.c  rainbow_keypair_computation.c  rng.c  test.c  utils_hash.c  utils_prng.c  utils_prng.h
src/esp/rsa/: CMakeLists.txt  README.md
src/esp/rsa/main/: CMakeLists.txt  api.h  test.c
src/esp32/luov-7-57-197-chacha/: CMakeLists.txt  sdkconfig
src/esp32/luov-7-57-197-chacha/components/XKCP/: CMakeLists.txt
src/esp32/luov-7-57-197-chacha/main/: CMakeLists.txt  Column.c  Column.h  F47Field.c  F61Field.c  F79Field.c  parameters.h  prng.h  rng.h  test.c
src/mathematica/: RB-gen.nb  RB.nb  UOV-gen.nb  UOV.nb
src/pc/Ia_Classic/: Makefile  utils_prng.h
src/pc/luov/: Makefile  README.md  parameters.h  test  test.c
src/pc/luov-7-57-197-chacha/: Makefile
src/pc/rb/: Makefile  README.md  test.c
src/thesis/: DP_Rahm_Jan_2020.tex  FITthesis.cls
